--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -15,13 +15,13 @@
 	<nav class="navbar bg-dark" data-bs-theme="dark">
 		<div>
 			<a class="navbar-brand" th:href="@{/home}">Home</a> <a
-				class="navbar-brand" th:href="@{/product/create}">Add Product</a>
+				class="navbar-brand" th:href="@{/products/create}">Add Product</a>
 		</div>
 	</nav>
 	<div layout:fragment="content" class="container body-content"></div>
 	<div class="card-footer">
 		<hr />
-		Lập trình ứng dụng Java -Nhóm 10 -@2023
+		Lập trình ứng dụng Java -Nhóm 8 -@2023
 	</div>
 </body>
 </html>
