--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -9,20 +9,25 @@
 </head>
 <body>
     <div layout:fragment = "content" class = "container body-container">
-        <form th:action="@{/product/create}" th:object="${product}" method="post" class="form">
+        <form th:action="@{/products/create}" th:object="${product}" method="post" class="form">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input class = "form-control" type="text" th:field="*{name}" id="name" placeholder="name">
+                <span class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
             </div>
 
             <div class="form-group">
                 <label for="image">Image:</label>
                 <input class = "form-control" type="text" th:field="*{image}" id="image" placeholder="image">
+                <span class="text-danger" th:if="${#fields.hasErrors('image')}" th:errors="*{image}"></span>
+
             </div>
 
             <div class="form-group">
                 <label for="price">Price:</label>
                 <input class = "form-control" type="text" th:field="*{price}" id="price" placeholder="price">
+                <span class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
+
             </div>
             <input type ="submit" class = "btn btn-success" value="Add">
         </form>
