--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
-
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="_layout" xmlns:custom="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="UTF-8">
-<title>Home</title>
+<title>List product</title>
 </head>
 <body>
-	<div layout:fragment = "content" class = "container body-container">
-
+	<div layout:fragment="content" class="container body-content">
+		ư
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">Name</th>
+					<th scope="col">Image</th>
+					<th scope="col">Price</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="product : ${listProduct}">
+					<th scope="row" th:text="${product.id}"></th>
+					<td th:text="${product.name}"></td>
+					<td ><img width="200" height="150" th:src="@{product.image}"></td>
+					<td th:text="${product.price}"></td>
+					<td><a th:href="@{/products/edit/{id}(id=${product.id})}"
+						custom:linkMethod="post" class="btn btn-secondary">Edit</a> <a
+						th:href="@{/products/delete/{id}(id=${product.id})}"
+						custom:linkMethod="post" class="btn btn-danger">Delete</a></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
 </body>
 </html>
