--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 		<table class="table table-striped">
 			<thead>
 				<tr>
-					<th scope="col">#</th>
+					<th scope="col">ID</th>
 					<th scope="col">Name</th>
 					<th scope="col">Image</th>
 					<th scope="col">Price</th>
